# omxil-sh

./: ConfigurationSettings.txt  Makefile.am  configure.ac
include/: Makefile.am
include/vpu5/: OMX_VPU5Ext.h
release_notes/: omxil-sh-0.9.0.txt  omxil-sh-1.0.0.txt  omxil-sh-1.1.0.txt  omxil-sh-1.2.0.txt
src/: Makefile.am
src/spu2/: Android.mk  Makefile.am  library_entry_point.c  omx_audiodec_component.c  omx_audiodec_component.h  omx_audioenc_component.c  omx_audioenc_component.h
src/spu2/spu2helper/: Makefile.am  common.h  spu.c  spu.h  spu_dsp.c  spu_dsp.h  spuaacdec.c  spuaacdec.h  spuaacenc.c  spuaacenc.h  uio.c  uiohelper.c  uiohelper.h
src/vpu5/: Android.mk  Makefile.am  ipmmuhelper.c  ipmmuhelper.h  library_entry_point.c  memallochelper.c  optiondefs.mk  shvpu5_avcdec.h  shvpu5_avcdec_bufcalc.c  shvpu5_avcdec_bufcalc.h  shvpu5_avcdec_decode.c  shvpu5_avcdec_input.c  shvpu5_avcdec_meram.c  shvpu5_avcdec_meram.h  shvpu5_avcdec_notify.c  shvpu5_avcdec_omx.c  shvpu5_avcdec_omx.h  shvpu5_avcdec_output.c  shvpu5_avcdec_parse.c  shvpu5_avcenc.h  shvpu5_avcenc_encode.c  shvpu5_avcenc_omx.c  shvpu5_avcenc_omx.h  shvpu5_avcenc_output.c  shvpu5_common_2ddmac.c  shvpu5_common_2ddmac.h  shvpu5_common_android_helper.cpp  shvpu5_common_android_helper.h  shvpu5_common_driver.c  shvpu5_common_ext.c  shvpu5_common_ext.h  shvpu5_common_ipmmu.c  shvpu5_common_ipmmu.h  shvpu5_common_log.c  shvpu5_common_log.h  shvpu5_common_meram.c  shvpu5_common_meram.h  shvpu5_common_queue.c  shvpu5_common_queue.h  shvpu5_common_sync.c  (+47 more)
